--- a/frontend/style/main.css
+++ b/frontend/style/main.css
@@ -124,15 +124,16 @@ ul {
   justify-content: space-between;
 }
 .container .tasks-container .delete-item > .delete-button {
-  width: 25px;
+  width: 45px;
   background-color: transparent;
   display: flex;
-  gap: 5px;
+  gap: 10px;
 }
-.container .tasks-container .delete-item > .delete-button svg {
-  width: 25px;
+.container .tasks-container .delete-item .delete-button .blue:hover {
+  cursor: pointer;
+  color: rgb(7, 148, 248);
 }
-.container .tasks-container .delete-item > .delete-button svg:hover {
+.container .tasks-container .delete-item > .delete-button .red:hover {
   cursor: pointer;
   color: rgb(248, 63, 7);
 }
@@ -140,4 +141,32 @@ ul {
   text-align: center;
   padding: 10px;
   color: rgb(63, 181, 141);
+}
+.finished {
+  background-color: #f0f0f0;
+  text-decoration: line-through;
+  opacity: 0.6;
+}
+.toast-message {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 9999;
+}
+
+/* Toast message */
+.toast {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  margin-bottom: 10px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+/* Show animation */
+.toast.show {
+  opacity: 1;
 }
